top position mobile layout fix

--- a/style.css
+++ b/style.css
@@ -409,10 +409,10 @@ body::-webkit-scrollbar-thumb {
         font-size: 1.45rem;
     }
     #l-2 {
-        top: 275%;
+        top: 290%;
     }
     #contact {
-        top: 400%;
+        top: 425%;
         height: 225%;
     }
     #decor {
